--- a/devicemonitor/conf/application.conf
+++ b/devicemonitor/conf/application.conf
@@ -1,2 +1,4 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
+db.test.driver = org.h2.Driver
+db.test.url = "jdbc:h2:mem:play"
