--- a/devicemonitor/conf/application.conf
+++ b/devicemonitor/conf/application.conf
@@ -1,4 +1,30 @@
 # This is the main configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost:3306/devicemonitor"
+db.default.username="root"
+db.default.password="root"
+
 db.test.driver = org.h2.Driver
 db.test.url = "jdbc:h2:mem:play"
+
+db.default.jndiName=DefaultDS
+
+jpa.default=defaultPersistenceUnit
+
+fixedConnectionPool = 9
+
+play.db {
+  prototype {
+    hikaricp.minimumIdle = ${fixedConnectionPool}
+    hikaricp.maximumPoolSize = ${fixedConnectionPool}
+  }
+}
+
+database.dispatcher {
+  executor = "thread-pool-executor"
+  throughput = 1
+  thread-pool-executor {
+    fixed-pool-size = ${fixedConnectionPool}
+  }
+}
