Refactor: separate data source for test and production

--- a/devicemonitor/conf/application.conf
+++ b/devicemonitor/conf/application.conf
@@ -5,12 +5,14 @@ db.default.url="jdbc:mysql://localhost:3306/devicemonitor"
 db.default.username="root"
 db.default.password="root"
 
+db.default.jndiName=DefaultDS
+jpa.default=defaultPersistenceUnit
+
 db.test.driver = org.h2.Driver
 db.test.url = "jdbc:h2:mem:play"
 
-db.default.jndiName=DefaultDS
-
-jpa.default=defaultPersistenceUnit
+db.test.jndiName=TestDS
+jpa.test=testPersistenceUnit
 
 fixedConnectionPool = 9
 
