--- a/devicemonitor/conf/application.conf
+++ b/devicemonitor/conf/application.conf
@@ -8,11 +8,11 @@ db.default.password="root"
 db.default.jndiName=DefaultDS
 jpa.default=defaultPersistenceUnit
 
-db.test.driver = org.h2.Driver
-db.test.url = "jdbc:h2:mem:play"
+# db.test.driver = org.h2.Driver
+# db.test.url = "jdbc:h2:mem:play"
 
-db.test.jndiName=TestDS
-jpa.test=testPersistenceUnit
+# db.test.jndiName=TestDS
+# jpa.test=testPersistenceUnit
 
 fixedConnectionPool = 9
 
